--- a/client/src/Components/topnav/NavBar.css
+++ b/client/src/Components/topnav/NavBar.css
@@ -10,13 +10,17 @@
   background-color: #494646;
   align-items: center;
   color: white;
+  z-index: 10;
 }
 .right-contents {
   margin-left: auto;
   margin-right: 2rem;
 }
 .left-contents {
-  margin-left: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -20px;
 }
 .logout-btn {
   background-color: #33ff99;
@@ -31,9 +35,32 @@
   color: #33ff99;
 }
 .logo-img {
+  transform: scale(0.55);
 }
 .logo-header {
-  margin-left: 10px;
   font-weight: 400;
   font-size: x-large;
+}
+.svg-icon {
+  transform: scale(0.2);
+}
+.cls-1 {
+  fill: none;
+}
+.cls-2,
+.cls-5 {
+  fill: #fff;
+}
+.cls-2 {
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  stroke-width: 33px;
+  opacity: 0.98;
+}
+.cls-3,
+.cls-4 {
+  fill: #3f9;
+}
+.cls-4 {
+  opacity: 0.76;
 }
