--- a/client/src/Components/sidenav/SideNav.css
+++ b/client/src/Components/sidenav/SideNav.css
@@ -1,4 +1,7 @@
 .sidenav-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: calc(100% - 70px);
   margin-top: 70px;
   width: 65px;
@@ -8,4 +11,11 @@
   background-color: #494646;
   color: white;
   z-index: 0;
+}
+.icon {
+  transform: scale(1.5);
+  margin-top: 2rem;
+}
+.icon:hover {
+  transform: scale(1.7);
 }
