--- a/client/src/Components/topnav/NavBar.css
+++ b/client/src/Components/topnav/NavBar.css
@@ -38,29 +38,7 @@
   transform: scale(0.55);
 }
 .logo-header {
+  margin-left: 10px;
   font-weight: 400;
   font-size: x-large;
-}
-.svg-icon {
-  transform: scale(0.2);
-}
-.cls-1 {
-  fill: none;
-}
-.cls-2,
-.cls-5 {
-  fill: #fff;
-}
-.cls-2 {
-  stroke: #fff;
-  stroke-miterlimit: 10;
-  stroke-width: 33px;
-  opacity: 0.98;
-}
-.cls-3,
-.cls-4 {
-  fill: #3f9;
-}
-.cls-4 {
-  opacity: 0.76;
 }
