--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,12 @@
 * {
   font-family: "Roboto", sans-serif;
 }
+.app {
+  background-color: #e5e5e5;
+
+  height: 100%;
+  width: 100%;
+}
 .landing {
   height: 100%;
   width: 100%;
