--- a/client/src/Components/sidenav/SideNav.css
+++ b/client/src/Components/sidenav/SideNav.css
@@ -4,18 +4,54 @@
   align-items: center;
   height: calc(100% - 70px);
   margin-top: 70px;
-  width: 65px;
+  width: 200px;
   position: fixed;
-  left: 0;
+  left: -130px;
   top: 0;
   background-color: #494646;
   color: white;
   z-index: 0;
+  transition: 0.5 ease;
+}
+.sidenav-container:hover {
+  transform: translateX(130px);
+  transition: transform 0.5s ease;
+}
+.sidenav-container:hover .hamburger {
+  transform: rotate(-90deg) scale(1.5);
+  transition: transform 0.5s ease;
+}
+.sidenav-container:hover .icon-caption {
+  transition: opacity 1s ease-in;
+  opacity: 1;
+  display: contents;
+}
+.hamburger {
+  transform: scale(1.5);
+  transition: transform 0.5s ease;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: 1.5rem;
+  position: sticky;
 }
 .icon {
   transform: scale(1.5);
   margin-top: 2rem;
+  padding-left: 1rem;
 }
-.icon:hover {
-  transform: scale(1.7);
+.icon-caption {
+  opacity: 0;
+  transition: opacity 1s ease-out;
+  margin-right: 2rem;
+}
+.icon-block {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: larger;
+  margin-left: auto;
+  margin-right: 1.5rem;
+  margin-top: 2rem;
+}
+.icon-block:hover {
 }
