--- a/client/src/Components/PetCards/PetCardV2/PetCardV2.css
+++ b/client/src/Components/PetCards/PetCardV2/PetCardV2.css
@@ -1,3 +1,8 @@
 .MuiCardContent-root {
-	display: flex;
+  display: flex;
+}
+.card {
+  margin-top: 10px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
