Fixed mobile feed and nav, added app title and icon

--- a/client/src/Components/Marketplace/Marketplace.css
+++ b/client/src/Components/Marketplace/Marketplace.css
@@ -16,3 +16,15 @@
   justify-content: center;
   margin-bottom: 20px;
 }
+@media only screen and (max-width: 600px) {
+  .market-container {
+    width: 100%;
+    align-items: center;
+    display: block;
+    margin: auto;
+    left: 0;
+    justify-content: center;
+  }
+  .cards {
+  }
+}
