--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,12 @@
   height: 100%;
   width: 100%;
 }
+.mobile-app {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 .landing {
   height: 100%;
 }
