--- a/client/src/Components/MobileTopNav/MobileTopNav.css
+++ b/client/src/Components/MobileTopNav/MobileTopNav.css
@@ -1,11 +1,12 @@
 .mobile-top-container {
-  margin: 0;
+  background-color: #ffff;
+  position: fixed;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 80px;
   display: flex;
   vertical-align: baseline;
-  z-index: 0;
+  z-index: 100;
 
   box-shadow: 0px 1px 1px #8888;
 }
@@ -21,8 +22,11 @@
   color: #33ff99;
 }
 .top-profile {
-  transform: scale(0.5);
-  margin-top: -0.5rem;
-  margin-right: -0.5rem;
+  transform: scale(0.7);
   border-radius: 100%;
+}
+@media only screen and (max-width: 600px) {
+  .mobile-top-container {
+    width: 100%;
+  }
 }
