--- a/client/src/Components/PetCards/PetCardV2/PetCardV2.css
+++ b/client/src/Components/PetCards/PetCardV2/PetCardV2.css
@@ -10,3 +10,14 @@
 .card :hover {
   cursor: pointer;
 }
+@media only screen and (max-width: 600px) {
+  .card {
+    min-width: 100%;
+    height: 700px;
+    margin: 0;
+  }
+  .card-media {
+    height: 50%;
+    width: 100%;
+  }
+}
